--- a/01/01-IO.html
+++ b/01/01-IO.html
@@ -19,6 +19,7 @@
               script tag goes right before closing the body
         -->
         <script>
+            'use strict';
             /*
                 This is BLOCK COMMENTING
                 REASON 1 - To leave notes for future me
@@ -27,8 +28,12 @@
                 REASON 2 - TODO lists
             */
 
+            let favoriteTVShow = 'Community';
+            window.alert(favoriteTVShow);
+
             // window.alert('hi');
             // window.alert("hello");
+            // window.alert(3);
             // window.confirm('hiya');
 
             let close = window.confirm('Would you like to close this window?');
