--- a/02 - Conditionals/andOr.html
+++ b/02 - Conditionals/andOr.html
@@ -34,5 +34,21 @@
     </script>
 
 
+    <script>
+
+    let randomNumber = Math.random(); // 0.000000 to 0.9999999
+
+    console.log(randomNumber);
+
+    if (randomNumber >= 0.0 && randomNumber < 0.3) {
+        document.write('a');
+    } else if (randomNumber >= 0.3 && randomNumber < 0.7) {
+
+    } else {
+
+    }
+
+    </script>    
+
 </body>
 </html>
