--- a/ModifyDOM/test2.html
+++ b/ModifyDOM/test2.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>THis is a GIT test</h1>
+    <h2>This is a second test</h2>
 </body>
 </html>
-
-<!-- asdf asdf-->
