--- a/04 - ModifyDOM/dataTags.html
+++ b/04 - ModifyDOM/dataTags.html
@@ -9,11 +9,10 @@
 <body>
     
     <!-- https://unsplash.com/photos/Hzbq4de24kQ-->
-    <img onclick="displayInfo(this.dataset.name, this.dataset.age)" id="oakTree" src="tree.jpg" alt="A tree" title="A tree" data-name="oak tree" data-age="200" width="500" />
+    <img onclick="displayInfo(this.dataset.name, this.dataset.age)" id="oakTree" src="tree.jpg" alt="A oak tree" title="A tree" data-name="oak tree" data-age="200" width="500" />
 
     <!-- https://unsplash.com/photos/8hTWsi2OSoA -->
-    <img onclick="displayInfo(this.dataset.name, this.dataset.age)" id="pineTree" src="pine.jpg" alt="A tree" title="A tree" data-name="pine tree" data-age="110" width="500" />
-
+    <img onclick="displayInfo(this.dataset.name, this.dataset.age)" id="pineTree" src="pine.jpg" alt="A pine tree" title="A tree" data-name="pine tree" data-age="150" width="500" />
 
     <script>
 
