updating shopping list

--- a/05 - Arrays/array.html
+++ b/05 - Arrays/array.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
 
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="array.css">
+    </head>
+    <body>
+
+        <div class="container">
+            <div class="title">
+                Shopping List
+            </div>
+
+            <div class="listContainer">
+                <input id="itemToAdd" class="inputBox">
+                <br />
+                <button class="btn" onclick="addItem()">Add item</button>
+        
+                <hr />
+
+                <div class="listItems" id="listItems">
+                    
+                </div>
+
+            </div>
+
+
+
+        </div>
+        <script src="array.js"></script>
+    </body>
+</html>
